# gtsam_points

./: .clang-format  .cppcheck_suppressions.txt  .gitignore  .gitmodules  404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml  package.xml  pyproject.toml  sitemap.xml  suppressions.txt
.github/workflows/: build.yml  gendoc.yml  license.yml
cmake/: FindGTSAM.cmake  FindIridescence.cmake  gtsam_points-config.cmake.in
data/: IMPORTANT_NOTES
data/continuous/: imu.txt  traj.txt
data/kitti_07_dump/: graph.txt
data/newer_01/: graph.txt
debian/: 01_build_debs.sh  changelog  control  copyright  files  gbp.conf  rules
debian/upstream/: metadata
doc_cpp/: _2home_2runner_2work_2gtsam_points_2gtsam_points_2include_2gtsam_points_2util_2jacobian_test_8hpp-example.html  alignment_8hpp_source.html  annotated.html  balm__feature_8hpp_source.html  bspline_8hpp_source.html  bundle__adjustment__factor_8hpp_source.html  bundle__adjustment__factor__evm_8hpp_source.html  bundle__adjustment__factor__lsq_8hpp_source.html  classes.html  classgtsam__points_1_1BundleAdjustmentFactorBase-members.html  classgtsam__points_1_1BundleAdjustmentFactorBase.html  classgtsam__points_1_1BundleAdjustmentFactorBase__coll__graph.map  classgtsam__points_1_1BundleAdjustmentFactorBase__coll__graph.md5  classgtsam__points_1_1BundleAdjustmentFactorBase__inherit__graph.map  classgtsam__points_1_1BundleAdjustmentFactorBase__inherit__graph.md5  classgtsam__points_1_1CUDABuffer-members.html  classgtsam__points_1_1CUDABuffer.html  classgtsam__points_1_1CUDAGraphExec-members.html  classgtsam__points_1_1CUDAGraphExec.html  classgtsam__points_1_1ContinuousTrajectory-members.html  classgtsam__points_1_1ContinuousTrajectory.html  classgtsam__points_1_1EVMBundleAdjustmentFactorBase-members.html  classgtsam__points_1_1EVMBundleAdjustmentFactorBase.html  classgtsam__points_1_1EVMBundleAdjustmentFactorBase__coll__graph.map  classgtsam__points_1_1EVMBundleAdjustmentFactorBase__coll__graph.md5  classgtsam__points_1_1EVMBundleAdjustmentFactorBase__inherit__graph.map  classgtsam__points_1_1EVMBundleAdjustmentFactorBase__inherit__graph.md5  classgtsam__points_1_1EasyProfiler-members.html  classgtsam__points_1_1EasyProfiler.html  classgtsam__points_1_1EasyProfilerCuda-members.html  classgtsam__points_1_1EasyProfilerCuda.html  classgtsam__points_1_1EdgeEVMFactor-members.html  classgtsam__points_1_1EdgeEVMFactor.html  classgtsam__points_1_1EdgeEVMFactor__coll__graph.map  classgtsam__points_1_1EdgeEVMFactor__coll__graph.md5  classgtsam__points_1_1EdgeEVMFactor__inherit__graph.md5  classgtsam__points_1_1FastOccupancyGrid-members.html  classgtsam__points_1_1FastOccupancyGrid.html  classgtsam__points_1_1GLBufferMap-members.html  classgtsam__points_1_1GLBufferMap.html  (+708 more)
doc_cpp/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+49 more)
docker/deb/: Dockerfile  Dockerfile.focal
docker/focal/: Dockerfile
docker/focal_cuda/: Dockerfile
docker/focal_cuda10.2/: Dockerfile
docker/focal_cuda11.2/: Dockerfile
docker/focal_cuda11.2_llvm/: Dockerfile
docker/focal_cuda_llvm/: Dockerfile
docker/focal_llvm/: Dockerfile
docker/jammy/: Dockerfile
docker/jammy_cuda11.8/: Dockerfile
docker/jammy_cuda11.8_llvm/: Dockerfile
docker/jammy_llvm/: Dockerfile
docker/ubuntu/: Dockerfile.focal  Dockerfile.focal.cuda  Dockerfile.gcc  Dockerfile.gcc.cuda  Dockerfile.llvm  Dockerfile.llvm.cuda  Dockerfile.notbb  Dockerfile.notbb.cuda
docs/: Doxyfile  index.md
include/benchmark/: benchmark.hpp  benchmark_overlap.hpp  dataset.hpp  noise_feeder.hpp
include/gtsam_ext/ann/: intensity_kdtree.hpp  ivox.hpp  ivox_covariance_estimation.hpp  kdtree.hpp  kdtree2.hpp  nearest_neighbor_search.hpp  projective_search.hpp
include/gtsam_ext/cuda/: async_stream.hpp  check_error.cuh  check_error_curand.cuh  check_error_cusolver.cuh  cuda_buffer.hpp  cuda_device_prop.hpp  cuda_device_sync.hpp  cuda_graph.cuh  cuda_graph_exec.hpp  cuda_malloc_async.hpp  cuda_memory.hpp  cuda_stream.hpp  gl_buffer_map.hpp  nonlinear_factor_set_gpu.hpp  nonlinear_factor_set_gpu_create.hpp  stream_roundrobin.hpp  stream_temp_buffer_roundrobin.hpp
include/gtsam_ext/factors/: balm_feature.hpp  between_sim3_se3_factor.hpp  bundle_adjustment_factor.hpp  bundle_adjustment_factor_evm.hpp  bundle_adjustment_factor_lsq.hpp  continuous_time_icp_factor.hpp  expression_icp_factor.hpp  integrated_color_consistency_factor.hpp  integrated_colored_gicp_factor.hpp  integrated_ct_gicp_factor.hpp  integrated_ct_icp_factor.hpp  integrated_gicp_factor.hpp  integrated_icp_factor.hpp  (+13 more)
include/gtsam_points/: config.hpp.in
search/: search_index.json
src/benchmark/: benchmark.cpp  benchmark_overlap.cpp  dataset.cpp  export_factors.cpp  gpu_benchmark.cpp  noise_feeder.cpp  overlap_benchmark.cpp
src/demo/: demo_benchmark.cpp  demo_bundle_adjustment.cpp  demo_colored_registration.cpp  demo_continuous_time.cpp  demo_continuous_trajectory.cpp  demo_global_registration.cpp  demo_matching_cost_factors.cpp  demo_segmentation.cpp
src/example/: advanced_frame_manipulation.cpp  advanced_scan_matching.cpp  basic_frame_manipulation.cpp  basic_scan_matching.cpp
src/python/: factors.cpp  pointcloud.cpp  python.cpp
src/test/: gtsam_ext_test.cpp  test_alignment.cpp  test_bundle_adjustment.cpp  test_colored_gicp.cpp  test_compact_mahalanobis.cpp  test_continuous_time.cpp  test_continuous_trajectory.cpp  test_cpu.cpp  test_global_registration.cpp  test_headers.cpp  test_kdtree.cpp  test_loam.cpp  test_loam_factors.cpp  test_matching_cost_factors.cpp  test_types.cpp  test_voxel_raycaster.cpp  test_voxelmap.cpp
src/tools/: gpu_benchmark.cpp  pose_interpolator.cpp  repro.cpp
(+409 files in other folders)
